# RTFoundation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml  macos.yml  ubuntu-cuda.yml  ubuntu.yml  windows-cuda.yml  windows.yml
Include/: color.h  color.hpp  rtweekend.h  rtweekend.hpp
Include/camera/: camera.h
Include/geometry/: sphere.h  sphere.hpp
Include/hittable/: hittable.h  hittable.hpp  hittable_list.h  hittable_list.hpp
Include/ray/: ray.h  ray.hpp
Include/vector3/: vector3.h  vector3.hpp
SRC/: color.cpp
SRC/geometry/: sphere.cpp
SRC/hittable/: hittable_list.cpp
SRC/ray/: ray.cpp
SRC/vector3/: vector3.cpp
rt-in-one-weekend/src/: command_line_tool.hpp
rt-in-one-weekend/src/cpu/: CMakeLists.txt  main.cpp
rt-in-one-weekend/src/cpu/Geometry/: Hittable.hpp  HittableList.hpp  Sphere.hpp
rt-in-one-weekend/src/cpu/Materials/: Metal.hpp
rt-in-one-weekend/src/cpu/Rays/: Ray.hpp
rt-in-one-weekend/src/gpu/: hittable_list.hpp  lambertian.hpp  main.cu  material.hpp  metal.hpp  moving_sphere.hpp
rt-the-next-week/: CMakeLists.txt  README.md
rt-the-next-week/src/cpu/: CMakeLists.txt  main.cpp  rtweekend.hpp
rt-the-next-week/src/cpu/AABB/: AABB.hpp
rt-the-next-week/src/cpu/Cameras/: Camera.hpp
rt-the-next-week/src/cpu/Colors/: Colors.hpp
rt-the-next-week/src/cpu/Geometry/: AABB.hpp  AABBRectangle.hpp  BVH.hpp  Box.hpp  Hittable.hpp  HittableList.hpp  MovingSphere.hpp  Sphere.hpp  TransformInstances.hpp
rt-the-next-week/src/cpu/Materials/: Dielectric.hpp  DiffuseLight.hpp  Isotropic.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
rt-the-next-week/src/cpu/Rays/: Ray.hpp
rt-the-next-week/src/cpu/Textures/: CheckerTexture.hpp  ImageTexture.hpp  SolidColor.hpp  Texture.hpp
rt-the-next-week/src/cpu/Utilities/: rtw_stb_image.hpp
rt-the-next-week/src/cpu/Volumes/: ConstantMedium.hpp
rt-the-next-week/src/gpu/: CMakeLists.txt  dielectric.hpp  hittable.hpp  rtweekend-gpu.hpp
src/: camera.hpp  command_line_tool.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  metal.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vector3.hpp
src/cpu/: CMakeLists.txt  Camera.hpp  Dielectric.hpp  Hittable.hpp  Material.hpp  Ray.hpp  Sphere.hpp  Vector3.hpp  color.hpp  dielectric.hpp  hittable.hpp  hittable_list.hpp  lambertian.hpp  main.cpp  material.hpp  metal.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vector3.hpp
src/cpu-to-gpu/: dielectric.hpp  hittable.hpp  hittable_list.hpp  main.cu  vector3.hpp
src/cpu/Colors/: Colors.hpp
src/cpu/Materials/: Dielectric.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
src/gpu/: CMakeLists.txt  camera.hpp  dielectric.hpp  hittable.hpp  lambertian.hpp  main.cu  material.hpp  metal.hpp  ray.hpp  rtweekend-gpu.hpp  rtweekend.hpp  sphere.hpp  vector3.hpp
